--- a/src/app.postcss
+++ b/src/app.postcss
@@ -1,2 +1,13 @@
 /*place global styles here */
-html, body { @apply h-full; }
+html,
+body {
+	@apply h-full;
+}
+
+.gradient-heading {
+	@apply box-decoration-clone bg-clip-text text-transparent;
+	/* Direction */
+	@apply bg-gradient-to-br;
+	/* Color Stops */
+	@apply from-primary-500 to-secondary-500;
+}
