--- a/src/app.postcss
+++ b/src/app.postcss
@@ -9,5 +9,5 @@ body {
 	/* Direction */
 	@apply bg-gradient-to-br;
 	/* Color Stops */
-	@apply from-primary-700 to-secondary-700 dark:from-primary-500 dark:to-secondary-500;
+	@apply from-primary-500 to-secondary-500;
 }
