adding custom font

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -11,3 +11,10 @@ body {
 	/* Color Stops */
 	@apply from-primary-500 to-secondary-500;
 }
+
+@font-face {
+	/* Reference name */
+	font-family: 'BebasNeue';
+	/* For multiple files use commas, ex: url(), url(), ... */
+	src: url('/fonts/BebasNeue-Regular.ttf');
+}
